# BSU_OS

Lab1/MacOS (Linux)/Main/: CMakeLists.txt  main.cpp
Lab1/MacOS (Linux)/Main/lib/include/: Vector.h  VectorConstants.h
Lab1/MacOS (Linux)/Number/: CMakeLists.txt  Number.cpp  Number.h  NumberConstants.h
Lab1/MacOS (Linux)/Vector/: CMakeLists.txt  Vector.cpp  VectorConstants.cpp  Vector_Export.h
Lab1/Windows/Main/: Main.sln
Lab1/Windows/Main/Main/: Main.cpp  Main.vcxproj
Lab1/Windows/NumberLib/: NumberLib.sln
Lab1/Windows/NumberLib/Debug/: Number.idb  Number.lib
Lab1/Windows/VectorLib/: VectorLib.sln
Lab2/MatrixMult/: CMakeLists.txt  main.cpp
Lab2/MatrixMultLinux/: CMakeLists.txt  main.cpp
Lab2/MatrixMultWindows/: CMakeLists.txt  main.cpp
Lab3/MatrixMult/: CMakeLists.txt  MatrixMult.cpp  MatrixMult.h  bufferedChannel.h  main.cpp
Lab4/Lab4MacOS/: CMakeLists.txt  killer.cpp  user.cpp
Lab4/Lab4Windows/: Lab4Windows.sln
Lab4/Lab4Windows/Killer/: Killer.cpp  Killer.vcxproj
Lab4/Lab4Windows/User/: User.cpp  User.vcxproj
Lab5/Lab5Linux/: CMakeLists.txt  input.txt  main.cpp  processA.cpp  processM.cpp  processP.cpp  processS.cpp
Lab5/Lab5Windows/: Lab5Windows.sln
Lab5/Lab5Windows/Main/: Main.cpp  Main.vcxproj  Main.vcxproj.filters
Lab5/Lab5Windows/ProcessA/: ProcessA.cpp  ProcessA.vcxproj  ProcessA.vcxproj.filters
Lab5/Lab5Windows/ProcessM/: ProcessM.vcxproj  ProcessM.vcxproj.filters
Lab5/Lab5Windows/ProcessP/: ProcessP.vcxproj  ProcessP.vcxproj.filters
Lab5/Lab5Windows/ProcessS/: ProcessS.vcxproj  ProcessS.vcxproj.filters
(+153 files in other folders)
